Fixed broken images and overflown info

--- a/src/app/components/list/list.component.scss
+++ b/src/app/components/list/list.component.scss
@@ -27,12 +27,18 @@ img {
     text-align: justify;
     padding: 10px;
     width: 100%;
+
+    p {
+      height: 177px;
+      overflow-y: auto;
+    }
   }
 }
 
 .Modal_Image {
   object-fit: cover;
   width: 100%;
+  height: 100%;
 }
 .Form {
   padding: 20px;
